# AIS-disabling-high-seas

./: .gitignore  README.md  setup.cfg
additional_analyses/: nearest_EEZ_code.R  readme.md
ais_disabling/: __init__.py  config.py  config_ole.py  figure_utils.py  model_utils.py  threshold_models.py  utils.py
analysis/: Justify12HourGapsSats.py  README.md  figs_compare_loitering_and_gaps.py  figs_disabling_case_study.py  figs_gap_stats.py  figs_model_selection.py  figs_reception_quality.py  figs_time_lost_to_gaps_methods.py  figs_time_lost_to_gaps_results.py  gaps_spatially_allocated_figures.py  si_activity_lost_to_gaps.py  si_gap_stats.py  si_reception_quality.ipynb  si_reception_quality.py  time_lost_to_gaps.py  time_lost_to_gaps_maps.py  time_lost_to_gaps_stats.py  total_time_lost_to_gaps.py
analysis/time_lost_to_gaps/: README.md  TimeLostGapsbyCategory.py  TotalTimeLosttoGaps.py  VisualizeRasters.py
boosted_regression_trees/: readme.md
boosted_regression_trees/functions/: BRTs_ModelEvaluation_fcns.R  extracto_functions.R  filter_down_your_data_function.R  load_libraries.R
data/: README.md  download_disabling_events.py  download_ole.py
data/environmental_and_behavioural_drivers/: l.chl.grd  (+6 more)
data_production/: README.md  config.py  generate_fishing.R  generate_gaps.R  generate_loitering.R  main.py  pipeline.py  run_gaps.ipynb  run_gaps.py  run_interpolate.py  run_labeled_gaps.py  run_ole.py  run_time_lost_to_gaps.py  run_vessels.py  utils.py  wrapper_generate_model_inputs.R
machine_learning/: README.md
model_selection/: README.md  model_selection.py
(+100 files in other folders)
