[metadata]
name = ais_disabling
version = 0.1.0
author = Jenn Van Osdel
author_email = jenn@globalfishingwatch.org
description = A python module for code related to Welch et al. (2022).
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GlobalFishingWatch/AIS-disabling-high-seas
project_urls =
    Bug Tracker = https://github.com/GlobalFishingWatch/AIS-disabling-high-seas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    pandas
    numpy
    scipy
    google-cloud-bigquery
    #black
    #flake8
    #isort
    #pre-commit

[options.extras_require]
nb =
    jupyter
    jupytext
